--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.0",
     "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
+    "uniqid": "^5.4.0",
     "yesql": "^5.0.0"
   }
 }
