--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "formidable": "^2.0.1",
+    "fs": "^0.0.1-security",
     "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
     "uniqid": "^5.4.0",
